# getopt

./: .gitignore  README.md
src/: CMakeLists.txt  getopt.cpp  getopt.hpp  getopt.hpp.in  manifest.rc.in  utils.cpp
tst/: CMakeLists.txt  demo.cpp  demo1.cpp  demo2.cpp  main.hpp
